# Crumb-Bob

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BOB_AUDIT_v0.3.1.md  BOB_REPORT.md  CHANGELOG.md  CODEX_PROMPT.md  CODEX_SUBMISSION_PROMPT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  Dockerfile  ENHANCEMENTS.md  ENHANCEMENTS_V0.3.md  HACKATHON.md  IBM_BOB_E2E_WALKTHROUGH.md  IBM_BOB_HANDOFF.md  LABLAB_SUBMISSION.md  LICENSE  README.md  SECURITY.md  SUBMISSION.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  tests.yml
crumdbob/: audit.py  cli.py  collector.py  config.py  differ.py  insights.py  llm.py  logging_config.py  memory.py  migrations.py  packer.py  pagination.py  parser.py  patterns.py  predict.py  query.py  retry.py  ui.py  validator.py  watcher.py
docs/: architecture.md  bob-shell-integration.md  configuration.md  crumdbob-cli.md  enhancement-roadmap.md  final-submission-checklist.md  insights.md  integrations.md  intelligent-queries.md  judge-walkthrough.md  llm-integration.md  multi-session-memory-architecture-diagram.md  multi-session-memory-design.md  multi-session-memory-examples.md  multi-session-memory-executive-summary.md  multi-session-memory-getting-started.md  pattern-detection.md  predictions.md  proof-chain.md  source-adoption-map.md  strategic-enhancement-plan.md
examples/compliance-ai/: bob-report.md
examples/workflows/: 01-auto-collect-workflow.md  02-watch-mode-workflow.md  03-diff-workflow.md
submission-assets/: crumbbob-v0.3.1-submission-deck.pptx
tests/: test_api.py  test_audit.py  test_collector.py  test_config.py  test_differ.py  test_intelligence.py  test_llm.py  test_logging_config.py  test_memory.py  test_metrics.py  test_middleware.py  test_migrations.py  test_pack_generation.py  test_pagination.py  test_retry.py  test_ui.py  test_watcher.py
web/: README.md  __init__.py  demo.js  index.html  styles.css
web/api/: __init__.py  metrics.py  middleware.py  server.py
web/static/: app.js  index.html  styles.css
