[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crumdbob"
version = "0.2.0"
description = "Replayable software memory for IBM Bob development sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "XIO AI Solutions" }]
keywords = ["ibm-bob", "ai", "developer-tools", "handoff", "crumb"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
watch = ["watchdog>=3.0.0"]

[project.scripts]
crumdbob = "crumdbob.cli:main"

[tool.setuptools.packages.find]
include = ["crumdbob*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
