[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crumdbob"
version = "0.3.0"
description = "Replayable software memory for IBM Bob development sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "XIO AI Solutions" }]
keywords = ["ibm-bob", "ai", "developer-tools", "handoff", "crumb"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
ui = ["rich>=13.0.0"]
web = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0"
]
watch = ["watchdog>=3.0.0"]
llm = [
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "tiktoken>=0.5.0"
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.0",
  "httpx>=0.25.0",
  "rich>=13.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "watchdog>=3.0.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "tiktoken>=0.5.0"
]
all = [
  "rich>=13.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "watchdog>=3.0.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "tiktoken>=0.5.0"
]

[project.scripts]
crumdbob = "crumdbob.cli:main"

[tool.setuptools.packages.find]
include = ["crumdbob*", "web*"]

[tool.setuptools.package-data]
web = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
