[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crumdbob"
version = "0.3.1"
description = "Replayable software memory for IBM Bob development sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "XIO AI Solutions" }]
keywords = ["ibm-bob", "ai", "developer-tools", "handoff", "crumb"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/XioAISolutions/Crumb-Bob"
Repository = "https://github.com/XioAISolutions/Crumb-Bob"
Issues = "https://github.com/XioAISolutions/Crumb-Bob/issues"
Changelog = "https://github.com/XioAISolutions/Crumb-Bob/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ui = ["rich>=13.0.0"]
web = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
]
watch = ["watchdog>=3.0.0"]
llm = [
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "tiktoken>=0.5.0",
]
all = [
  "rich>=13.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "watchdog>=3.0.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "tiktoken>=0.5.0",
]
dev = [
  # Test runners
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.2",
  "httpx>=0.25.0",
  # Static analysis
  "mypy>=1.8",
  "ruff>=0.3.0",
  "bandit[toml]>=1.7.5",
  "pip-audit>=2.6.0",
  # Pre-commit
  "pre-commit>=3.5.0",
  # Runtime extras so dev installs run all tests
  "rich>=13.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "watchdog>=3.0.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "tiktoken>=0.5.0",
]

[project.scripts]
crumdbob = "crumdbob.cli:main"

[tool.setuptools.packages.find]
include = ["crumdbob*", "web*"]

[tool.setuptools.package-data]
crumdbob = ["py.typed"]
web = ["static/*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests that hit the filesystem, subprocess, or network",
  "unit: marks pure-function tests with no side effects",
]
filterwarnings = [
  "error",
  # FastAPI's TestClient emits a DeprecationWarning on httpx 0.27+ that's outside our control.
  "ignore::DeprecationWarning:httpx",
  # uvicorn warns about the loop kwarg on newer Python — not ours to fix.
  "ignore::DeprecationWarning:uvicorn",
  # sqlite3.Connection.__del__ can emit ResourceWarning during pytest's GC
  # cycle when the FastAPI app holds a connection past test teardown. The
  # behaviour is benign (Python closes it eventually) and fixing it would
  # require either explicit app teardown in every test or moving to a
  # dependency-injected connection pool. Tracked for v0.4.
  "ignore::pytest.PytestUnraisableExceptionWarning",
  "ignore::ResourceWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["crumdbob", "web"]
branch = true
omit = [
  "*/tests/*",
  "*/__main__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
# Enforce a floor; raises slowly as test coverage grows.
fail_under = 60
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "examples/compliance-ai/generated",
  "web/static",
  "web/demo.js",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "ARG",  # unused arguments
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "PTH",  # use pathlib over os.path
  "PL",   # pylint subset
  "RUF",  # ruff-specific
  "S",    # bandit-like security checks
  "T20",  # flake8-print (warns on print() usage)
  "TID",  # tidy imports
]
ignore = [
  "E501",    # line too long — formatter handles this; we cap at 100 chars
  "PLR0913", # too many arguments — many of ours are by design
  "PLR0912", # too many branches — CLI/render code has them legitimately
  "PLR0915", # too many statements
  "PLR2004", # magic numbers in tests are fine
  "S101",    # use of assert — fine in tests
  "S311",    # non-cryptographic random — we use it for IDs, not secrets
  "T201",    # print() is the CLI's user-facing output channel
  "RUF012",  # mutable class attrs without ClassVar — too noisy on dataclasses
  "B008",    # function calls in default args — FastAPI's Query() pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S", "PLR", "T20"]
"examples/*" = ["ALL"]
"crumdbob/cli.py" = ["T20", "PLR0911", "PLC0415"]   # CLI is allowed to print; lazy imports keep extras optional
"crumdbob/ui.py" = ["T20"]    # Rich UI fallback uses print
"crumdbob/collector.py" = ["S603"]  # subprocess with fixed git args
"crumdbob/memory.py" = ["S603"]     # subprocess with fixed git args
"web/api/server.py" = ["B008"] # FastAPI Query() default pattern

[tool.ruff.lint.isort]
known-first-party = ["crumdbob", "web"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
show_error_codes = true
files = ["crumdbob", "web"]

# Per-module relaxations until we hit 100% typed.
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "crumdbob.llm"
# LLM SDKs are optional; their import paths are unioned with sentinels.
disallow_untyped_calls = false

# ---------------------------------------------------------------------------
# Bandit (security)
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "examples", ".venv", "build", "dist"]
skips = [
  # B404: subprocess module is used safely (list-form, no shell=True).
  "B404",
  # B603: subprocess without shell=True is the safe path.
  "B603",
  # B607: starting process with partial path — we use the `git` PATH lookup intentionally.
  "B607",
]
